TddBrainfuckInstructionSet (WIP)
* add labels
* use Java 19 Preview